@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare pretend setup
-DEPEND=dbus? ( sys-apps/dbus ) idn? ( net-dns/libidn ) lua? ( || ( dev-lang/lua:0 dev-lang/lua:5.1 ) ) conntrack? ( !s390? ( net-libs/libnetfilter_conntrack ) ) nls? ( sys-devel/gettext net-dns/libidn ) app-arch/xz-utils dnssec? ( dev-libs/nettle[gmp] static? ( dev-libs/nettle[static-libs(+)] ) ) virtual/pkgconfig virtual/pkgconfig
+DEPEND=dbus? ( sys-apps/dbus ) idn? ( net-dns/libidn ) lua? ( || ( dev-lang/lua:0 dev-lang/lua:5.1 ) ) conntrack? ( net-libs/libnetfilter_conntrack ) nls? ( sys-devel/gettext net-dns/libidn ) app-arch/xz-utils dnssec? ( dev-libs/nettle[gmp] static? ( dev-libs/nettle[static-libs(+)] ) ) virtual/pkgconfig virtual/pkgconfig
 DESCRIPTION=Small forwarding DNS server
 EAPI=5
 HOMEPAGE=http://www.thekelleys.org.uk/dnsmasq/doc.html
 IUSE=auth-dns conntrack dbus +dhcp dhcp-tools dnssec idn ipv6 lua nls script selinux static tftp linguas_de linguas_es linguas_fi linguas_fr linguas_id linguas_it linguas_no linguas_pl linguas_pt_BR linguas_ro
 KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd
 LICENSE=|| ( GPL-2 GPL-3 )
-RDEPEND=dbus? ( sys-apps/dbus ) idn? ( net-dns/libidn ) lua? ( || ( dev-lang/lua:0 dev-lang/lua:5.1 ) ) conntrack? ( !s390? ( net-libs/libnetfilter_conntrack ) ) nls? ( sys-devel/gettext net-dns/libidn ) dnssec? ( !static? ( dev-libs/nettle[gmp] ) ) selinux? ( sec-policy/selinux-dnsmasq )
-REQUIRED_USE=dhcp-tools? ( dhcp ) lua? ( script ) s390? ( !conntrack )
+RDEPEND=dbus? ( sys-apps/dbus ) idn? ( net-dns/libidn ) lua? ( || ( dev-lang/lua:0 dev-lang/lua:5.1 ) ) conntrack? ( net-libs/libnetfilter_conntrack ) nls? ( sys-devel/gettext net-dns/libidn ) dnssec? ( !static? ( dev-libs/nettle[gmp] ) ) selinux? ( sec-policy/selinux-dnsmasq )
+REQUIRED_USE=dhcp-tools? ( dhcp ) lua? ( script )
 SLOT=0
 SRC_URI=http://www.thekelleys.org.uk/dnsmasq/dnsmasq-2.72.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=be892829051db473110dfc00f56a68aa
+_md5_=ae33769fe7032870c4d6a88fa7a01b98
