@@ -4,10 +4,10 @@ DESCRIPTION=Free implementation of the Remote Desktop Protocol
 EAPI=5
 HOMEPAGE=http://www.freerdp.com/
 IUSE=alsa +client cpu_flags_x86_sse2 cups debug doc ffmpeg gstreamer jpeg neon pulseaudio server smartcard test usb wayland X xinerama xv
-KEYWORDS=~amd64 ppc ppc64 x86
+KEYWORDS=amd64 ppc ppc64 x86
 LICENSE=Apache-2.0
 RDEPEND=dev-libs/openssl:0 sys-libs/zlib:0 alsa? ( media-libs/alsa-lib ) cups? ( net-print/cups ) client? ( usb? ( virtual/libudev:0= sys-apps/util-linux:0= dev-libs/dbus-glib:0= virtual/libusb:1= ) X? ( x11-libs/libXcursor x11-libs/libXext x11-libs/libXi x11-libs/libXrender xinerama? ( x11-libs/libXinerama ) xv? ( x11-libs/libXv ) ) ) ffmpeg? ( virtual/ffmpeg ) gstreamer? ( media-libs/gstreamer:1.0 media-libs/gst-plugins-base:1.0 x11-libs/libXrandr ) jpeg? ( virtual/jpeg:0 ) pulseaudio? ( media-sound/pulseaudio ) server? ( X? ( x11-libs/libXcursor x11-libs/libXdamage x11-libs/libXext x11-libs/libXfixes xinerama? ( x11-libs/libXinerama ) ) ) smartcard? ( sys-apps/pcsc-lite ) wayland? ( dev-libs/wayland ) X? ( x11-libs/libX11 x11-libs/libxkbfile )
 SLOT=0/1.2
 SRC_URI=https://github.com/FreeRDP/FreeRDP/archive/aa2181dcf2dd98693767ba738c5b2ad8c3d742d4.tar.gz -> freerdp-1.2.1_pre20150326.tar.gz
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
-_md5_=71301a7b72b158b6782d26c0199c3a61
+_md5_=794e61594f1af96282fa15c8f2f3bdaf
