@@ -14,24 +14,24 @@ DIST dnsmasq-2.66.tar.xz 401056 SHA256 5e143947527bcdc46a30f4b1bbdfbfa96333dd98b
 DIST dnsmasq-2.72.tar.xz 454048 SHA256 7d0bd23f5d74b3a6b26a75d5ffcf9db81d461b47cbe578cb65a83a98008600b1 SHA512 d84b89c987966a5f5880aa329833626b0a017628dd6aa667bdad880d1c5f101a386dddb439eb6983d58952a36f25670bf58df94281b89320f02895a3e6af4cec WHIRLPOOL 491eadb0060f372a0b7f5855fb57040c4baf37352732a2943fb4173aa28e875b91537f87085201f13e76ec5680e4ad681992829a5cef800833be0911298a793c
 EBUILD dnsmasq-2.66.ebuild 3181 SHA256 2811d53903d109cc344c962bfa49e6c9f857242931663042a74e0778c145da9e SHA512 2efdee54d8dd70be76cbce1e6b729618c1e79170dca1f054cf0f12ca0eca5ab65a5a61471fe913f5851f4d97c36fb83203d5d23fb6512ea30e6d4ea9ab16c124 WHIRLPOOL 8c49095c02073fe3b56fcff2f2333b7724fff270ecf03908b351d902be95d9ad80b1b20dafd9f8739b2c93f38027a62a8bc1580dfba8000b5f1efe29e1f0cb15
 EBUILD dnsmasq-2.72-r1.ebuild 4438 SHA256 5c4f9c49e5153fbda1a40a13f2223e5dd74076e7d4074a2cd59cc0b11d226ad4 SHA512 f32ad3413bf929f6c42ad43972504cc871a07229220eac103a0c4adf4c817aba2120e6239813f0cc43ca39da3b7857c4913a616984a7845b03214e9edd323d26 WHIRLPOOL 3b1b356aea6f9ccc83de4dfb58673d57768a209a49762bdfd784185806140d1eb5a7ba740c6fd238c86fe305a1225c2639cccd58051bae6af3c8edc727798acf
-EBUILD dnsmasq-2.72-r2.ebuild 4479 SHA256 50094a3d8405c24d7008589ac69571da73048aac85e37b0325f717631e47a0e9 SHA512 e3301a4c44fd13b7740a34d2d22d45d82473422cfa6d86824ff3f8124c127e87e51766f09131faeb01b5d781f9c9b495adc6b65623770ab368303e5e1c6f67c3 WHIRLPOOL 90b197e0f4751925712bd4877b0d0135349cb434956841df6cefdeb2e4f96db72a0a9f5a9613363ec80f3c59d6f69a6cc2dbbeb79642edc029263b3016e0adc8
+EBUILD dnsmasq-2.72-r2.ebuild 4446 SHA256 c58dd0cd11b91d3b687c27aaec95b6ef3531e9fe149c5c40810f3b8554f3b9ba SHA512 b4cad9a0b9099dcd5d6712aa7ced8ca6ed47337cbdec984a345aca7d658e874804ee300d474e4ac1914b93341a32efcddca1acf61a13dcb31b82f25992273206 WHIRLPOOL f415bae916dbe8004c1ed83f04dc86db1b07406fdc81e36794bece7ff4b1a48d18a4dfee421ec0c050ffb291d9483962e78863927d287519b75ade995e6e9ffa
 EBUILD dnsmasq-2.72.ebuild 4228 SHA256 8aaf3cbf173910c5adf0d25068289727d9c8eacbd1c5778883d252e6d1670c54 SHA512 31b9d191248ac827dabe6f02558051697f5d9d38a0591891045b87ec8e87062e14575bb95c1b21f88cf4374ed8ad68537c927deac977f2299fda27ba6d279aeb WHIRLPOOL a2a8fd6ffbd0e4da4250ac39a0f0ea1484eee1450c5b3e32d4a6ba702461be7cd1b8ec33efa86b97703c22523dab052da5079c7a1c304afb3dcf2c3990926e62
-MISC ChangeLog 36706 SHA256 9ba473c6d109fa468b6509b655ef6cb2edf6c8b9602ffee67ab544d89efd8576 SHA512 78b431806c4f041b8c0b5935e9a17184b72b13e80334487bacaa933f01a36410d0fe0dcd2c0459ca7df5460355f9847cec66ff78f2518b5b240991d6b5f090b7 WHIRLPOOL a445c14e0b2fb92a3e36fdcdc2395032497752c7cd7c803e7865b3450b786c88bee5f48c390193a6ac11d61653450bb768cdbdac7d169ac442bb7e5cfb427d73
+MISC ChangeLog 36841 SHA256 a89b26cf0397fe0c13743ef9cdb2d877742985c281d4a142c9b542bd1ab6c51f SHA512 9cc38bd8172de23ac282c9dd3354bcda7489507e259427c4287c63ff301acf1411c96fb3f46abe66b0caa0000746cee5f2943bf0583b96dc3b5e0441a6dcaa23 WHIRLPOOL 397ce0f2c0bdbae149f0ea3b0e0f6ac58bd743d66d526c79035617febe368470b2549943734624464f793ff1e10501add7046949efd86fbb627c48132f3d4dc3
 MISC metadata.xml 890 SHA256 7952192e999afd4942b22e31dbaa1a8cb4972e5a8f7f8596476277c294dbc84d SHA512 7d3f3d84bc34eb57a241c2f6781561a3247ef24def3d22b64b603f490d0ca922223c2a8772b8d728f5ed3c063219ddbf6d03a5e891ca0a71d5497bb6068017b6 WHIRLPOOL f3bce03b7bf361f9456b1a342e8c40b71dce5ca0d5e0b9653859d5e4f08e2c44c8ad09e30bc51d1c9d3492fbe8ce42c0532bda3b8b8de1b693c1a8557cd75aad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVQe5lAAoJEPGu1DbS6WIA+UgP/0K7sHg8JUNyTgaqiWxmEqR/
-I6L56Y/0L5YxQGrwdAxxxljuycDRTYhV8DO4tfFxx1KS8HWpZ1LoblTpY0gnA0nu
-PFhpX6FGLipqwIdvRbbUWcAZL1h4nLawr2DtXelX4bfVyIXYcbXLVkAcSToLSQMI
-CJCMiJ3prT5A734+G5PPCoEaYBmTL20nU6Jq3DDPTY/HvtOzoWJcV1mDJMi254Ih
-2KTkZrap6p9hX82F0eXO9y5bUWv+LxdxlNwKSGIRN5PnTBqf8bn3RRvuxToN8qrr
-8g2zLvUbroWPsp9615Sjcbocmph+ccD+kS9ADi5Ve4IhryozCuW7U0SRfC8I9Ina
-hDjncGpxXUsB3DKWT+WxeNRD/vo9CWPFy+EVmjK5svGv16NTY26QMp0XVQkbckL8
-g1RAeXZ+/kgf3UYTk4W3aho8D+l1WCGWDa3ulKJ9fF/1fQiDUo4J817fzLl7VWlY
-FdPyH0y8goGGvfYCYbeLB3PcByYwPhF0W2Bm3bpYe+fad8MEIi5CBLgW1sabhZwv
-6khQKtMdA1TLfmzxZBMhPD5rtv12eMsSm3Z2masDO9RBQaq4C67Ck6TKQ3UJLDwY
-AkPj4oqJFTXkPlCRTt2uLI9AIr79qISzeUqNQBW9mLMnZSz4ILDLBtIby9zay+TB
-pc86TLrnfZdlvVHXtxUf
-=06r5
+iQIcBAEBCAAGBQJVSOKBAAoJEPGu1DbS6WIAk+AP/2We8ucqR4nfuoHCWjSruvoA
+FZV3RNIIqimY/g/oPNGltkILrcYQAzUtda0dEBu2lwwPk5mAg64qm1PgnN1dDtJr
+gWO5jyWAJAkaPV9HP20fifECgcIsp7pjHsqW9t8BrFafTBhL8QILTq/kY5iWWqUC
+I7s/tTfEzdNEdA1yM2yNdHxGzt/O0JnSMIUGhSW24bIlDQ9yaybofo8M2+dn/hF4
+5MjM4nEFABJg9lIDv9ujULxGCL+x53RMmwvCk6yAHjlHaxa3vNIAhgYXo7r1UgVL
+P4rHwPaVBarymy2lkXmfoVCPH4HWzkJJL4H0QPlewLMxSbYwUFQcF6IM/IXY5fjO
+Zr302DSGP4ajpynFlEzboiwdhUaUxaHfTAAanf7AFnXtpLSlyPkysjXzKnk/vlt6
+l1dwiz1sPB3R00rt6UAqcz6SxS+IVIb3w2XvSh6FF8Ecez/VG8JVZN4WDzWzFnMq
+G50HtC+zT00beYD/q2qJfDdJQF66WUp+a03h8mmoHZb3pglp43uLuM5q/BVRAqqS
+tibUQdevBzwzpEGwTl4WFtzYnGKoi+TqLSj3euzrjS14S6N9Rfjr4eMY+gOBVSqj
+qDaHbPMbiTxlN1kgechZQ4mZpMyBLB82lTFkjIPfh8fPDVpsrAgeAspFkjLphvm+
+h2Ah55taCkwI6gGZOoME
+=wSSI
 -----END PGP SIGNATURE-----
