@@ -16,14 +16,14 @@ EBUILD freerdp-1.1.0_beta1_p20130710-r1.ebuild 2676 SHA256 492c3011d30aa85417590
 EBUILD freerdp-1.1.0_beta1_p20130710-r2.ebuild 2862 SHA256 067d5981466ea7d567841e8457b08c2e9394e1ef9329b20260858c0706b95186 SHA512 562a1be45b063e26c61e66897bb9aafd12330457c865e108476d84c8e0c0dd69bee7b2a496e3ee05f65dcc5635d81f005e29090c2a2e76587d1420732de2908a WHIRLPOOL 079180fdca84f28dba3c5fbb0a6b37811f0320af1bd1366d17e2480d96d94edc6363857fdbb9251379b61e7ee8dd4f245fee218b108679089f247a919c8abf15
 EBUILD freerdp-1.1.0_beta1_p20150312.ebuild 2827 SHA256 51295f4ae044c63f743645b4c9c2bb67cf1d87146257094befad715d53705f72 SHA512 d310686160a141920fc3ef3a025f2339534e66c51f6e42d9e82f4ac44aa865b3d5e3f826566bc7dae18efda343135e779da6d6b786be64976e6469842bf03367 WHIRLPOOL b1a9f9e28224338ff057c613ecbd70909a0ddde458f78c5bc6d1c8dbaa3cc390c5fe138a9c73235e8509c192246de726eca8cc75ae8dcfd606d72dad128def94
 EBUILD freerdp-1.2.0_beta1_pre20141115.ebuild 2711 SHA256 a049203055f1206548ee35cd40395aa0999b4c7c6d7529f60072e9b92fac29ae SHA512 dd61cdf5ece8d4e2676c9ac47475915934012da01282b3543dc988350fea2320e44e3773b7708e8bd1bdb6bcff6a935ff1c98c81ae7f5fe31c823ad7f06f2f03 WHIRLPOOL 8c22e2e415cd6d5c966f0f1ebbb3ab36b13f6a1db97d5d32f71d3f689b7fe5ec15654676d41a4e52871956b2602ce4471eb582efe328cd9bdebfc36ce6b4c6e3
-EBUILD freerdp-1.2.1_pre20150326.ebuild 2699 SHA256 7ae5e5bbb7f75f76258e3759f7c1ff6571f778134a078dbff58c5d6268436d7b SHA512 1ae0c89cf420aa4e951f606bbc2bbc40fc78426095ac1bb432ae1035f38c2990b2b2e6a6dc55a1cbc37070677a3e3c699c109381fd0ac79c974fe1f82c734a5b WHIRLPOOL 584db31e1fa8732cfd43f2ed73a47f374c800d9c1ed3978a64803139bc71595ca03ee5f351aa13cf144d3d69429268a1fc0f4411dde7905af206e24d025f2a3a
+EBUILD freerdp-1.2.1_pre20150326.ebuild 2698 SHA256 42ecfefae779d4f300a4278636917d85f2a479fb0b12a2fec41f7b5532e0b8fd SHA512 a0b21455f813a09c8609ed3578ad57c8fb942c53e87c292c2e485ba6c2e48a02545e4668dd86749d4ab70df37100c2552799c1df9d461898d015e4b3532cc246 WHIRLPOOL 3f5ff72c33056ac1d95499cfa42568e60c791e813f3636020e4234bc91ddf3c6324da888a0eb58b133464b2b3e1ad10d9a423448ada4df52208776b33cbaf932
 EBUILD freerdp-9999.1.ebuild 2692 SHA256 f5783aa1d8a49faf725a7541e9d07adfb3e396f5edbff251834bbd88561f3e28 SHA512 b14c3bc93244abe346f6dde5310ca6be5fbf4e07051d1d3a67495eee75dd8125707bd811405bf39e6316c97fe28e32258f3944cae690f5f0e374c74d74b432a9 WHIRLPOOL f05bd694887037544a45fdf4ea258d90f92e882b6faf820a2620bd2382e210b5e47fa7b2b571f7d941903b1e9c1f0f0ab8aee6288d95735d8862a7acae0918f4
-MISC ChangeLog 14774 SHA256 708e8d90f84736b3d6560d5a1a51bbb15de9bfe32758048dea2c1c1d60dfdbb2 SHA512 7453c4df70b0be5da11465b609f5d735c811fe5316fd7f927c407da1cbf50c571333f47f45974bbd3a9629691609e1f2c89b879e979afb71a3c2fda3c8368231 WHIRLPOOL 4441022aff926961e2ecad0621bd082925578738dbcc46a6a9ac7fea401f048b8c9b400b9b5b4101dd3fee784098065ce1e0413a984bf1f405484887297d1b5c
+MISC ChangeLog 14891 SHA256 4a1cde77084b0309b55f120f845795d4e6a405ad1145439b6b28480e4922b5ce SHA512 70f0c746d17120ff230271767225c8a02fb96b84bc34d5428700598c9ae284c20734eccab44d6529affb8260d49ec8af7bb373fe32eab467eed26303af4cf029 WHIRLPOOL ac89c2e465e4ba31b1b57e2a76b680a9a448f674ebe1b7b444cca77f1a6cb9b5b8cdcd95c8aef8c84826712564753cfc9ca5600a889b8aeca5b43635b520acd9
 MISC metadata.xml 424 SHA256 677d4fb3c378ea8ee9c4e340b7b32cf57a9f4fe9b92edddb42ddd39448f73f01 SHA512 4f1bb050f9b9889422c2e86b87dd43246b41cf45c1ce4e6c05e1c477c4a3031c20820edfd648cbc4ba2b61d2bae40883fcd5676246a0bc3fe767f5713701cf54 WHIRLPOOL d3ad68eadaf540d6200dc6a15ee3fe3597f80a64c1d2f8b7d22b23fb137422fda2edca1a8438800b31cd5d5dfd74dca23f611ad433b812f8bfe1ac0f1aa85b11
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlVBi8cACgkQC77qH+pIQ6TSngEAroTavq1KB0qfMgUHGzKGeFYl
-onp3C9OpyoyXKqPdnwcBAL6MIeAnIya04J4xQUnlYdYbqDC7/lHHBF++UX7J2gnL
-=KdBZ
+iF4EAREIAAYFAlVI5hIACgkQC77qH+pIQ6RgrgD8D8Ms6tzEXuAXJdDl3X1oUqmd
+cIWlNnDZu5W6JalVKyYBAIUwGz0ZTGMAjKwa+7mYIwa1cTplO6lIIYmmUhsYMEc2
+=ELGF
 -----END PGP SIGNATURE-----
