@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/freerdp-1.2.1_pre20150326.ebuild,v 1.5 2015/04/30 01:56:22 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/freerdp-1.2.1_pre20150326.ebuild,v 1.6 2015/05/05 15:47:28 floppym Exp $
 
 EAPI="5"
 
@@ -9,7 +9,7 @@ inherit cmake-utils vcs-snapshot
 if [[ ${PV} != 9999* ]]; then
 	COMMIT="aa2181dcf2dd98693767ba738c5b2ad8c3d742d4"
 	SRC_URI="https://github.com/FreeRDP/FreeRDP/archive/${COMMIT}.tar.gz -> ${P}.tar.gz"
-	KEYWORDS="~amd64 ppc ppc64 x86"
+	KEYWORDS="amd64 ppc ppc64 x86"
 else
 	inherit git-r3
 	SRC_URI=""
