@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/dnsmasq
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.268 2015/04/30 08:57:08 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.269 2015/05/05 15:32:16 vapier Exp $
+
+  05 May 2015; Mike Frysinger <vapier@gentoo.org> dnsmasq-2.72-r2.ebuild:
+  Drop s390 arch protections now that the dep is keyworded.
 
   30 Apr 2015; Mike Frysinger <vapier@gentoo.org> metadata.xml:
   Add CPE info.
